<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dip" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="7dip"
            android:text="@string/sol_menu_baslik"
            android:textColor="@color/sol_menu_baslik_rengi" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:background="@color/sol_menu_cizgi_rengi" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/OrtHesapla_Click"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/solmenucustomclickstyle"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.20"
                        android:gravity="left"
                        android:padding="5dp"
                        android:src="@drawable/hesaplamakucuk" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.80"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/ort_hesaplama"
                        android:textColor="@color/kahve" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/sol_menu_cizgi_rengi" />

                <LinearLayout
                    android:id="@+id/HaritaClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/solmenucustomclickstyle"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.20"
                        android:gravity="left"
                        android:padding="5dp"
                        android:src="@drawable/haritakucuk" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.80"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/harita"
                        android:textColor="@color/kahve" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/sol_menu_cizgi_rengi" />

                <LinearLayout
                    android:id="@+id/TabloClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/solmenucustomclickstyle"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.20"
                        android:gravity="left"
                        android:padding="5dp"
                        android:src="@drawable/tablokucuk" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.80"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/tablo"
                        android:textColor="@color/kahve" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/sol_menu_cizgi_rengi" />

                <LinearLayout
                    android:id="@+id/DuyurularClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/solmenucustomclickstyle"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.20"
                        android:gravity="left"
                        android:padding="5dp"
                        android:src="@drawable/duyurular" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.80"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/duyuru"
                        android:textColor="@color/kahve" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/sol_menu_cizgi_rengi" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/sol_menu_cizgi_rengi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/btn_iletisim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="İletişim" />

            <Button
                android:id="@+id/btn_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Ayarlar" />
            <!-- <Button -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:text="Bu" /> -->


            <!-- <Button -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:text="Bu" /> -->


            <!-- <Button -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:text="Bu" /> -->


            <!-- <Button -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:text="Bu" /> -->

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>